PROJECT(nTwoDigits)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.c)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_LIBRARY(TwoDigitsLib STATIC ${SOURCE_FILES} ${HEADERS} )

INCLUDE_DIRECTORIES(TwoDigitsLib ../include)
